--- a/jsapp/scss/components/_kobo.collection-asset-list.scss
+++ b/jsapp/scss/components/_kobo.collection-asset-list.scss
@@ -115,7 +115,7 @@ div.library {
     }
   }
   .asset-items {
-    @extend .mdl-shadow--2dp;
+    @include box-shadow;
     background: #FFF;
     position: relative;
     &--visible {
