--- a/jsapp/scss/components/_kobo.drawer.scss
+++ b/jsapp/scss/components/_kobo.drawer.scss
@@ -12,7 +12,6 @@
 
 .mdl-layout__content {
   margin-left: 270px;
-  margin-right:16px;
 }
 
 .k-drawer__icons {
